--- a/public/index.html
+++ b/public/index.html
@@ -66,18 +66,18 @@
           <!-- Header Content -->
 
           <!-- Copywriting -->
-          <div class="mt-8 lg:flex lg:justify-between">
-            <div class="text-center lg:text-left mt-16">
+          <div class="mt-4 mb-10 lg:flex lg:justify-between">
+            <div class="text-center lg:text-left mt-20 lg:mt-16">
                 <div class="">
                     <p class="headline text-6xl tracking-normal">Banking<br> more smart</p>
                     <p class="my-8 text-535354 text-xl">Meet the only spend management <br> platform and corporate card</p>
-                    <i class="fa-solid fa-arrow-right p-4 my-10 bg-black text-white m-0 lg:mt-4 lg:mb-8"></i>
+                    <i class="fa-solid fa-arrow-right p-4 my-4 bg-black text-white m-0 lg:mt-4 lg:mb-8"></i>
                     <a href="#" class="font-bold pl-4 pr-10">Get your card</a>
                 </div>
             </div>
 
             <!-- Visa Image -->
-            <div class="mt-4 lg:m-0">
+            <div class="my-20 lg:m-0">
                 <img src="..\assets\card.png" alt="" class="mx-auto">
             </div>
 
@@ -92,7 +92,7 @@
             <div class="grid grid-cols-3 gap-2 md:gap-7 md:ml-7 lg:gap-20 lg:ml-20">
                 <div class="py-4 lg:p-0">
                     <img src="..\assets\icon-1.png" alt="" class="w-8 h-8 mx-auto lg:mx-0">
-                    <p class="font-inter font-bold py-2 lg:text-xl lg:mt-2">1.5% Cashback</p>
+                    <p class="font-inter font-bold py-2 lg:text-xl lg:mt-2">Cashback</p>
                     <p class="py-4 font-roboto text-5F5F64 lg:text-xl lg:mt-4">Online shopping for retail sales direct to consumers</p>
                 </div>
                 <div class="py-4 lg:p-0">
@@ -118,19 +118,73 @@
 
         <!-- Philosophy Section -->
         <section id="philosophy" class="relative w-full h-full">
-            <div class="text-center mx-28 grid lg:text-left lg:grid-cols-2 lg:gap-40 lg:py-40 lg:mx-32">
+            <div class="text-center mx-16 grid lg:text-left lg:grid-cols-2 lg:gap-40 lg:py-40 lg:mx-32">
                 <div class="mt-20 lg:mt-0 lg:ml-40">
                     <p class="font-bai-jamjuree text-2xl tracker-wider">We Building <br>Social uniqueness</p>
                     <p class="font-roboto text-lg my-4 text-5F5F64">The marketing strategy lays out target markets and the value.</p>
                 </div>
-                <div class="mt-20 lg:mt-0 lg:mr-40">
+                <div class="my-20 lg:mt-0 lg:mr-40">
                     <p class="font-bai-jamjuree text-2xl tracker-wider">Social Media <br>beyond probability</p>
                     <p class="font-roboto text-lg my-4 text-5F5F64">Essentially a formula for how a business is going to compete.</p>
                 </div>
             </div>
         </section>
 
+        <!-- Feedback Section -->
+        <section id="feedback" class="">
+            <div class="my-20 mx-6 lg:mx-32">
+                <p class="font-bai-jamjuree text-6xl font-bold text-center lg:text-8xl">90,000+ Customers</p>
+                <p class="font-roboto text-lg text-5F5F64 my-16 text-center lg:w-2/3 lg:mx-auto lg:mb-24">
+                    Analyze any Business or Creator account—including your competitors—to find the imagery, visuals, and captions that drive audience engagement. Get social calendars planned faster and spend less time testing content strategies.
+                </p>
+                <div class="grid grid-rows-2 grid-flow-col lg:grid-cols-4 lg:grid-rows-none">
+                    <div class="py-8 text-center border-t-2 border-r-2 border-b-2 border-gray-300">
+                        <p class="text-718176 font-inter text-lg tracking-even-wider py-4">PRODUCTS</p>
+                        <p class="text-3xl font-roboto font-bold">1,000+</p>
+                    </div>
+                    <div class="py-8 text-center border-r-2 border-b-2 border-gray-300 lg:border-t-2">
+                        <p class="text-718176 font-inter text-lg tracking-even-wider py-4">LIKES</p>
+                        <p class="text-3xl font-roboto font-bold">45,600</p>
+                    </div>
+                    <div class="py-8 text-center border-t-2 border-b-2 border-gray-300 lg:border-r-2">
+                        <p class="text-718176 font-inter text-lg tracking-even-wider py-4">SALE</p>
+                        <p class="text-3xl font-roboto font-bold">576,864</p>
+                    </div>
+                    <div class="py-8 text-center border-b-2 border-gray-300 lg:border-t-2">
+                        <p class="text-718176 font-inter text-lg tracking-even-wider py-4">CUSTOMERS</p>
+                        <p class="text-3xl font-roboto font-bold">94,744</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Feature Section -->
+        <section id="benefit">
+            <div class="my-40 mx-6 lg:mx-32 lg:flex lg:justify-between lg:gap-28">
+                <div class="hidden bg-41B3F4 w-3/4 h-auto lg:block">
+                    <img src="..\assets\visualization.png" alt="" class="relative right-32 top-28">
+                </div>
+
+                <div class="py-10 text-center lg:text-left ">
+                    <p class="font-bai-jamjuree font-bold text-4xl lg:text-5xl lg:mr-28 lg:tracking-wider">Handoff  your  work  smarter  now</p>
+                    <p class="font-roboto text-base text-727272 pt-6 pb-20 lg:pb-10 lg:mr-52"> Create documentation for the collaborators (i.e designers or devs) directly in your design file</p>
+                    <div class="lg:flex lg:my-10">
+                        <img src="..\assets\logo-2.png" alt="" class="w-20 h-20 border rounded-full bg-white mx-auto lg:mx-0 ">
+                        <div class=" mt-6 lg:mt-0 lg:ml-8">
+                            <p class="font-bai-jamjuree text-lg font-semibold pb-2 lg:pb-4 ">Strategic</p>
+                            <p class="font-roboto text-base text-727272 lg:pr-40">Suggests that the component spacing between cards and elements</p>
+                        </div>
+                    </div>
+                    <div class="lg:flex mt-14">
+                        <img src="..\assets\logo-3.png" alt="" class="w-20 h-20 border rounded-full bg-white mx-auto lg:mx-0">
+                        <div class="mt-6 lg:mt-0 lg:ml-8">
+                            <p class="font-bai-jamjuree text-lg font-semibold pb-2 lg:pb-4 ">Work schedule</p>
+                            <p class="font-roboto text-base text-727272 lg:pr-40">Work schedule is the time an employee is expected to be on the job</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
