--- a/public/index.html
+++ b/public/index.html
@@ -222,6 +222,7 @@
                 <!-- Visa Card -->
                 <div>
                     <img src="..\assets\card-2.png" alt="" class="scale-100 hidden lg:block">
+                    test
                 </div>
             </div>
         </section>
